Hopefully fix wrong styling on iPhones

--- a/src/app/components/content/tripSelector/dateAndTimePicker/DateAndTimePicker.module.css
+++ b/src/app/components/content/tripSelector/dateAndTimePicker/DateAndTimePicker.module.css
@@ -86,6 +86,9 @@
 }
 
 .inputFields label {
+  display: block;
+  width: 100%;
+
   font-weight: 700;
   font-size: 1rem;
 }
